--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h2{
     background-color: rgb(201, 137, 54);
     padding-left: 15px;
 }
-p{
+div ul li{
     font-size: 30px;
     background-color: rgb(231, 200, 159);
     font-weight: bold;
