--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,18 @@ h1{
 }
 nav ul li{
     display: inline;
+    border:rgb(95, 45, 4) solid 2px;
+    background-color:rgb(207, 147, 78);
     color: green;
-    background-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
     font-size: xx-large;
     font-weight: bold;
     margin-left: 20%;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
 }
 h2{
     font-size: 35px;
